# MemoryManager

./: CMakeLists.txt  MemoryManager.cpp  MemoryManager.h  README.md  SegmentAllocator.hpp  TMemoryManager.cpp  TMemoryManager.h  TSharedMemoryManager.cpp  TSharedMemoryManager.h  TSmartAllocator.h  main.cpp
cmake/: MemoryManagerConfig.cmake
include/MemoryManager/: Core.hpp
src/MemoryManager/: Core.cpp
test/: main.cpp
